kubernetes/healthcheck-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcheck-app
spec:
  selector:
    matchLabels:
      app: healthcheck-app
  replicas: 1
  template:
    metadata:
      labels:
        app: healthcheck-app
    spec:
      containers:
      - name: healthcheckappcontainer
        image: "emrekenci/k8s-healthcheck:v1"
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
