kubernetes/healthcheck-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-app-service
  labels:
    app: healthcheck-app-service
spec:
  selector:
    app: healthcheck-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: LoadBalancer
