kubernetes/monitoring-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-app-service
  labels:
    app: monitoring-app-service
spec:
  selector:
    app: monitoring-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
